syntax = "proto3";

package user;

option go_package = "github.com/Dejan91/inventory-management/proto/user";

message UpdateUserRequest {
  string auth_uid = 1;
  string uid = 2;
  string username = 3;
  string email = 4;
}

message UpdateUserResponse {
  string uid = 1;
  string external_uid = 2;
  string username = 3;
  string email = 4;
}