syntax = "proto3";

package pb;

option go_package = "github.com/Dejan91/inventory-management/user/pb";

message DeleteUserRequest {
  string auth_uid = 1;
  string uid = 2;
}

message DeleteUserResponse {
  string message = 1;
}